--- a/app/views/layouts/mailer.text.erb
+++ b/app/views/layouts/mailer.text.erb
@@ -1,1 +1,9 @@
 <%= yield %>
+
+---
+Clownschule Confetti
+Sandra Cardamone
+sandra@clownschule-confetti.de
+www.clownschule-confetti.de
+
+<%= Time.current.strftime("%d.%m.%Y um %H:%M Uhr") %>
