--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -57,6 +57,9 @@
           Es macht Spaß als Clown neue und ungeahnte Seiten an uns selbst zu entdecken.
           Unsere Fehler und Unzulänglichkeiten sind für Clowns die größten Schätze.
         </p>
+        <p class="workshop-card__description">Hebe Deine Lebensfreude auf ein neues Level!
+          Es macht Spass als Clown neue und ungeahnte Seiten an uns selbst zu entdecken. Unsere Fehler und Unzulänglichkeiten sind für Clowns die größten Schätze. Dinge, die wir im Alltag nicht mögen z. B. das Chaos ist absolut lustig in der Clown-Interpretation.
+          Begegne noch heute der Kraft des Lachens!</p>
         <div class="workshop-card__footer">
           <span class="workshop-card__price">Online Kurs</span>
           <%= link_to "Mehr erfahren", clownschule_online_path(anchor: "clown-entdecken"), class: "btn btn--primary" %>
