--- a/app/views/pages/impressum.html.erb
+++ b/app/views/pages/impressum.html.erb
@@ -1,2 +1,108 @@
-Sandy Millar
-Foto von <a href="https://unsplash.com/de/@sandym10?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Sandy Millar</a> auf <a href="https://unsplash.com/de/fotos/rot-weisses-plastikspielzeug-NNtdOuq1hqc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+<section class="page-intro">
+  <h1>Impressum</h1>
+</section>
+
+<section class="impressum-content">
+  <div class="impressum-grid">
+
+    <div class="impressum-column">
+      <h2>Impressum - Clownschule Confetti</h2>
+
+      <p><strong>Angaben gemäß § 5 TMG</strong></p>
+      <p>
+        Sandra Cardamone<br>
+        Alpenstr. 53<br>
+        82194 Gröbenzell
+      </p>
+
+      <p>
+        <strong>Kontakt:</strong><br>
+        Telefon: +49 173 9629753<br>
+        E-Mail: <%= mail_to 'sandracardamone@yahoo.de' %>
+      </p>
+
+      <p>
+        <strong>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</strong><br>
+        Sandra Cardamone
+      </p>
+
+      <h3>Haftungsausschluss</h3>
+
+      <h4>Haftung für Inhalte</h4>
+      <p>
+        Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und
+        Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG
+        für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir
+        als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen
+        oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung
+        oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine
+        diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei
+        Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
+      </p>
+
+      <h4>Haftung für Links</h4>
+      <p>
+        Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb
+        können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets
+        der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der
+        Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht
+        erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte
+        einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links
+        umgehend entfernen.
+      </p>
+
+      <h4>Urheberrecht</h4>
+      <p>
+        Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen
+        Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des
+        Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien
+        dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser
+        Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte
+        Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten
+        wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte
+        umgehend entfernen.
+      </p>
+
+      <h4>Datenschutz</h4>
+      <p>
+        Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren
+        Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder eMail-Adressen) erhoben werden, erfolgt dies,
+        soweit möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an
+        Dritte weitergegeben.
+      </p>
+      <p>
+        Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail)
+        Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.
+      </p>
+      <p>
+        Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur Übersendung von
+        nicht ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit ausdrücklich widersprochen. Die
+        Betreiber der Seiten behalten sich ausdrücklich rechtliche Schritte im Falle der unverlangten Zusendung von
+        Werbeinformationen, etwa durch Spam-Mails, vor.
+      </p>
+
+      <p class="impressum-generator">
+        Impressum vom <%= link_to "Impressum Generator", "https://www.impressum-generator.de", target: "_blank" %> der
+        <%= link_to "Kanzlei Hasselbach, Rechtsanwälte für Arbeitsrecht und Familienrecht", "https://www.kanzlei-hasselbach.de/", target: "_blank" %>
+      </p>
+    </div>
+
+    <div class="impressum-column">
+      <h2>Bildnachweis</h2>
+      <p>Alle Bilder von Sandra Cardamone oder von <%= link_to "Pixabay", "https://pixabay.com/de/", target: "_blank" %></p>
+
+      <p>Foto von <%= link_to "Ben Wicks", "https://unsplash.com/de/@profwicks?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash", target: "_blank" %> auf <%= link_to "Unsplash", "https://unsplash.com/de/fotos/mann-in-blau-rot-weiss-kariertem-hemd-mit-braunem-hut-Ns96HhR-b-c?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash", target: "_blank" %></p>
+
+      <p>Foto von Il Clown Caramello: <%= link_to "Pexels", "https://www.pexels.com/de-de/foto/mann-sitzung-portrat-kostum-10889195/", target: "_blank" %></p>
+
+      <p><%= link_to "Party popper Icons erstellt von Freepik - Flaticon", "https://www.flaticon.com", target: "_blank", title: "party popper Icons" %></p>
+
+      <p><%= link_to "Pexels Foto", "https://www.pexels.com/de-de/foto/frau-gesicht-portrat-spass-4005309/", target: "_blank" %></p>
+      <p>Foto von <a href="https://unsplash.com/de/@sandym10?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Sandy Millar</a> auf <a href="https://unsplash.com/de/fotos/rot-weisses-plastikspielzeug-NNtdOuq1hqc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+      </p>
+
+      <p>AdobeStock_482551826, AdobeStock_76378226, AdobeStock_57734941</p>
+    </div>
+
+  </div>
+</section>
