--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,7 +12,7 @@
           <%= link_to 'Clownschule-Online', clownschule_online_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Frage den Clown', frage_den_clown_path, class: "nav-link" %>
+          <%= link_to 'Kontakt zum Clown', kontakt_zum_clown_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to 'Clown Videos', movies_path, class: "nav-link" %>
