--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,10 +1,12 @@
 <section class="page-intro">
-  <h1>Clownschule Confetti - Video's</h1>
+  <h1>Video's mit dem Clown</h1>
 
 
   <%= image_tag "video-clown.webp", alt: "Clownschule Confetti Video's", title: "Clownschule Confetti - Video's",
                 class: "img-fluid float-end shadow-sm" %>
+  <h2>Clownschule Confetti</h2>
   <p class="lead">Informationen und Lustiges ❣️</p>
+
   <p>
     Clowns sind in erster Linie dafür bekannt, Menschen zum Lachen zu bringen. Ihr Humor kann sich von slapstickartigen
     physischen Komödien bis hin zu subtilen Wortspielen und absurdem Verhalten erstrecken.
@@ -58,3 +60,15 @@
     </div>
   <% end %>
 </section>
+
+<% content_for :title do %>
+Video's mit dem Clown
+<% end %>
+
+<% content_for :description do %>
+Informationen und Lustiges ❣️ Clownsschule Confetti in Video's - Zahlreiche Videos der Clownschule Confetti
+<% end %>
+
+<% content_for :cano do %>
+https://www.clownschule-confetti.de/videos-mit-dem-clown
+<% end %>
