--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -226,6 +226,17 @@
         </ul>
       </div>
     </div>
-
   </div>
 </section>
+
+<% content_for :title do %>
+Clownschule Confetti & Sandra Cardamone
+<% end %>
+
+<% content_for :description do %>
+Hier erzähle ich etwas über mich! Und über meine professionellen Clown-Ausbildungen
+<% end %>
+
+<% content_for :cano do %>
+https://www.clownschule-confetti.de/sandra-cardamone
+<% end %>
