--- a/app/views/pages/datenschutz.html.erb
+++ b/app/views/pages/datenschutz.html.erb
@@ -310,3 +310,15 @@
 
   </div>
 </section>
+
+<% content_for :title do %>
+Clownschule Confetti Datenschutz
+<% end %>
+
+<% content_for :description do %>
+Clownschule Confetti Datenschutz
+<% end %>
+
+<% content_for :cano do %>
+https://www.clownschule-confetti.de/datenschutz
+<% end %>
