--- a/app/views/pages/impressum.html.erb
+++ b/app/views/pages/impressum.html.erb
@@ -106,3 +106,15 @@
 
   </div>
 </section>
+
+<% content_for :title do %>
+Impressum - Clownschule Confetti
+<% end %>
+
+<% content_for :description do %>
+Impressum, Anbieterkennzechnung, Bildernachweis
+<% end %>
+
+<% content_for :cano do %>
+https://www.clownschule-confetti.de/impressum
+<% end %>
