--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -151,3 +151,15 @@
     </p>
   </div>
 </section>
+
+<% content_for :title do %>
+Clownschule Confetti - Clown Workshops Online
+<% end %>
+
+<% content_for :description do %>
+Clown Workshops Online: Deine Chance, den Clown in dir zu entdecken und zu entfesseln. Schon immer davon geträumt die Welt mit einem Lächeln zu verzaubern?
+<% end %>
+
+<% content_for :cano do %>
+https://www.clownschule-confetti.de
+<% end %>
