--- a/app/views/pages/workshops.html.erb
+++ b/app/views/pages/workshops.html.erb
@@ -294,3 +294,16 @@
     </div>
   </div>
 </section>
+
+
+<% content_for :title do %>
+Clownschule Confetti Online Kurse
+<% end %>
+
+<% content_for :description do %>
+Die achtsame Kunst eines Klinik Clowns, Entdecke den Clown in Dir, Clown Coaching Lebenskünstler, Clown Performance Feedback
+<% end %>
+
+<% content_for :cano do %>
+https://www.clownschule-confetti.de/clownschule-online
+<% end %>
