--- a/app/assets/stylesheets/_grid.scss
+++ b/app/assets/stylesheets/_grid.scss
@@ -121,7 +121,7 @@
        li {
          position: relative;
          padding-left: 1.5rem;
-         margin-bottom: var(--spacing-md);
+         //margin-bottom: var(--spacing-xs);
          line-height: 1.6;
 
          &:last-child {
