--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,18 @@
     <title><%= content_for(:title) || "Clown Schule" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Clown Schule">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="description" content="<%= yield :desc %>"/>
     <meta name="author" content="Sandra Cardamone">
+    <meta name="distribution" content="global"/>
+    <meta name="content-language" content="de">
+    <meta name="page-topic" content="Clownschule Confetti">
+    <meta name="page-type" content="Beschreibung">
+    <meta name=“site_name“ content="clownschule-confetti.de"/>
+    <meta name="robots" content="index,follow"/>
+    <meta name="referrer" content="origin">
+
+    <meta name="description" content="<%= yield :description %>"/>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
