--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,10 +9,10 @@
           <%= link_to 'Der Clown in Dir  🎉', root_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Clownschule-Online', clownschule_online_path, class: "nav-link" %>
+          <%= link_to 'Clownschule', clownschule_online_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Kontakt zum Clown', kontakt_zum_clown_path, class: "nav-link" %>
+          <%= link_to 'Kontakt & Buchungen', kontakt_zum_clown_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to 'Clown Videos', movies_path, class: "nav-link" %>
